udev 127
========
Bugfixes.

udev 126
========
We use ./configure now. See INSTALL for details. Current
options are:
    --prefix=
        "/usr" - prefix for man pages, include files
    --exec-prefix=
        "" - the root filesystem, prefix for libs and binaries
    --sysconfdir=
        "/etc"
    --with-libdir-name=
        "lib" - directory name for libraries, not a path name
        multilib 64bit systems may use "lib64" instead of "lib"
    --enable-debug
        compile-in verbose debug messages
    --disable-logging
        disable all logging and compile-out all log strings
    --with-selinux
        link against SELInux libraries, to set the expected context
        for created files

In the default rules, the group "disk" gets permissions 0660 instead
of 0640. One small step closer to unify distro rules. Some day, all
distros hopefully end up with the same set of rules.

No symlinks to udevadm are installed anymore, if they are still needed,
they should be provided by the package.

udev 125
========
Bugfixes.

Default udev rules, which are not supposed to be edited by the user, should
be placed in /lib/udev/rules.d/ now, to make it clear that they are private to
the udev package and will be replaced with an update. Udev will pick up rule
files from:
  /lib/udev/rules.d/  - default installed rules
  /etc/udev/rules.d/  - user rules + on-the-fly generated rules
  /dev/.udev/rules.d/ - temporary non-persistent rules created after bootup
It does not matter in which directory a rule file lives, all files are sorted
in lexical order.

To help creating /dev/root, we have now:
  $ udevadm info --export --export-prefix="ROOT_" --device-id-of-file=/
  ROOT_MAJOR=8
  ROOT_MINOR=5
In case the current --device-id-of-file is already used, please switch to
the --export format version, it saves the output parsing and the old
format will be changed to use ':' as a separator, like the format in the
sysfs 'dev' file.

udev 124
========